--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "steamlibvr",
   "version": "1.0.0",
   "description": "Experience your steam game collection \"physically\" in VR.",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kai Roth",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
     "pug": "^3.0.2"
-  }
+  },
+  "type": "module"
 }
