--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kai Roth",
   "license": "ISC",
   "dependencies": {
+    "capture-website": "^2.0.2",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
