--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "imagemin-mozjpeg": "^9.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sharp": "^0.29.0"
   },
   "type": "module"
 }
