--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kai Roth",
   "license": "ISC",
   "dependencies": {
+    "basisu": "^1.15.0",
     "capture-website": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
